--- a/public/assets/css/adminedit.css
+++ b/public/assets/css/adminedit.css
@@ -868,7 +868,6 @@
         border-radius: 10px;
         position: relative;
         top: 0; 
-        display:flex;
     }
 
     .edit-contents-cms-header {
